# docs/swagger.json
@@ -1362,7 +1362,7 @@
         },
         "/marks/statuses": {
             "get": {
-                "description": "get mark statuses",
+                "description": "get mark statuses; `name` is localised by the Accept-Language header (ru, en; default ru), `code` is a stable identifier",
                 "consumes": [
                     "application/json"
                 ],
@@ -1373,6 +1373,19 @@
                     "marks"
                 ],
                 "summary": "List mark statuses",
+                "parameters": [
+                    {
+                        "enum": [
+                            "ru",
+                            "en"
+                        ],
+                        "type": "string",
+                        "default": "ru",
+                        "description": "response language",
+                        "name": "Accept-Language",
+                        "in": "header"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1391,7 +1404,7 @@
         },
         "/marks/types": {
             "get": {
-                "description": "get mark types",
+                "description": "get mark types; `name` is localised by the Accept-Language header (ru, en; default ru), `code` is a stable identifier",
                 "consumes": [
                     "application/json"
                 ],
@@ -1402,6 +1415,19 @@
                     "marks"
                 ],
                 "summary": "List mark types",
+                "parameters": [
+                    {
+                        "enum": [
+                            "ru",
+                            "en"
+                        ],
+                        "type": "string",
+                        "default": "ru",
+                        "description": "response language",
+                        "name": "Accept-Language",
+                        "in": "header"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -2308,6 +2334,45 @@
                         "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/github_com_PritOriginal_problem-map-server_pkg_responses.Response-any"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PritOriginal_problem-map-server_pkg_responses.Response-any"
+                        }
+                    }
+                }
+            }
+        },
+        "/tasks/statuses": {
+            "get": {
+                "description": "get task statuses; `name` is localised by the Accept-Language header (ru, en; default ru), `code` is a stable identifier",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "List task statuses",
+                "parameters": [
+                    {
+                        "enum": [
+                            "ru",
+                            "en"
+                        ],
+                        "type": "string",
+                        "default": "ru",
+                        "description": "response language",
+                        "name": "Accept-Language",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PritOriginal_problem-map-server_pkg_responses.Response-internal_handler_tasks_GetTaskStatusesResponse"
                         }
                     },
                     "500": {
@@ -3235,7 +3300,10 @@
         "github_com_PritOriginal_problem-map-server_internal_models.MarkStatus": {
             "type": "object",
             "properties": {
-                "mark_status_id": {
+                "code": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "integer"
                 },
                 "name": {
@@ -3297,7 +3365,10 @@
         "github_com_PritOriginal_problem-map-server_internal_models.MarkType": {
             "type": "object",
             "properties": {
-                "mark_type_id": {
+                "code": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "integer"
                 },
                 "name": {
@@ -3547,6 +3618,20 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "github_com_PritOriginal_problem-map-server_internal_models.TaskStatus": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -4375,6 +4460,23 @@
                 }
             }
         },
+        "github_com_PritOriginal_problem-map-server_pkg_responses.Response-internal_handler_tasks_GetTaskStatusesResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "$ref": "#/definitions/github_com_PritOriginal_problem-map-server_pkg_responses.ErrorInfo"
+                },
+                "meta": {
+                    "$ref": "#/definitions/github_com_PritOriginal_problem-map-server_pkg_responses.ListMeta"
+                },
+                "payload": {
+                    "$ref": "#/definitions/internal_handler_tasks.GetTaskStatusesResponse"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "github_com_PritOriginal_problem-map-server_pkg_responses.Response-internal_handler_tasks_GetTasksByUserIdResponse": {
             "type": "object",
             "properties": {
@@ -5049,6 +5151,17 @@
             "properties": {
                 "task": {
                     "$ref": "#/definitions/github_com_PritOriginal_problem-map-server_internal_models.Task"
+                }
+            }
+        },
+        "internal_handler_tasks.GetTaskStatusesResponse": {
+            "type": "object",
+            "properties": {
+                "task_statuses": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_PritOriginal_problem-map-server_internal_models.TaskStatus"
+                    }
                 }
             }
         },
